# my-bot

./: answers.json  conversation_log.json  evaluation_dataset.json  orders.json  package-lock.json  package.json  pars.docx  pyproject.toml  similar_products.json  tea_data.json  test_data_result.json  ~$pars.docx
backend/: accuracy.py  accuracy_zhosko.py  app.py  dataset.py  instruction.txt  parser.py  test_json_tool.py  test_model.py
backend/responses/: hard_quetions.json  orders_debug.txt  orders_responses.json  similar_debug.txt  similar_responses.json  tea_data_debug.txt  tea_data_responses.json  tea_descriptions.json  tea_prices.json
backend/test_results/: BERTScore_tea_data.txt  hard_results.txt  order_result.txt  similar_results.txt  tea_description_results.txt  tea_prices_results.txt
questions/: hard_questions.json  orders_questions.json  similar_products.json  tea_data_questions.json
src/: App.css  App.js  MyBot.jsx
